--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 101 Template</title>
+    <title>Kazanican</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
     <!-- AngularJS -->
     <script src="https://code.angularjs.org/1.3.2/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.2/angular-route.min.js"></script>
     <script src="app/js/lib/angular-locale_tr-tr.js"></script>
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
     <script src="app/js/app.js"></script>
+    <script src="app/js/controllers/controllers.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,34 +34,8 @@
     </style>
   </head>
   <body>
-    <div class="container" ng-controller="CalculateController">
-      <form ng-submit="calculateFinishDate(user)">
-        <div class="form-group">
-          <label>Dogum Tarihin
-            <input type="date" class="form-control" ng-model="user.birthday">
-          </label>
-        </div>
-        <div class="form-group">
-          <label>Kac yasinda namaz kilmakla farz olundun?
-            <input type="number" class="form-control" ng-model="user.ageOfMaturity">
-          </label>
-        </div>
-        <div class="form-group">
-          <label>Kac senedir namaz kiliyorsun?
-            <input type="number" class="form-control" ng-model="user.prayingYears">
-          </label>
-        </div>
-        <div class="form-group">
-          <label>Gunde kac vakit kilabilirsin?
-            <input type="number" class="form-control" ng-model="user.commitPerDay">
-          </label>
-        </div>
-        <input type="submit" class="btn btn-primary" value="Ne zamana bitecegini hesapla">
-      </form>
-      <div class="message-box" ng-show="dayOfFinish">
-        <p class="lead">Yaklaşık {{ yearsOfResponsibility }} yıl içinde bu iş tamam! Zaman su gibi akıp geçiyor... Hiç merak etme!</p>
-        <p>Bugünden itibaren <u>günde {{ user.commitPerDay }} vakit kaza namazı</u> kılabilirsen, <b>{{ dayOfFinish | date:'d MMM yyyy EEEE' }}</b> günü kazalarını tamamlamış olacaksın!</p>
-      </div>
+    <div class="container">
+      <div ng-view></div>
     </div>
   </body>
 </html>
